# pinch

./: .gitignore  .nfs0000000000ab93a000000720  Meeting_Notes.md  README.md  config.yml  pyproject.toml  workflow.sh
dag/: combine_files.sub
scripts/: apply_cutoff.py  chunk_parse.py  combine_files.py  compute_cutoff.py  file_finder.py  find_dirty_pycbc_trigs.py  find_dirty_trigs.py  get_gspy_events.py  get_gstlal_triggers.py  get_gstlal_triggers_dag.py  get_gstlal_triggers_lite.py  get_gstlal_triggers_preallocate.py  get_pycbc_triggers.py  omicron_finder.py  pycbc_trigger_finder.py  sqlite_to_csv.py  wrapper.sh  write_dag.py
src/: Apply_Cutoff.py  Calculating_VSVs.py  Compute_Cutoff_Statistic.py  Find_Dirty_Triggers.py  Finding_Dirty_Triggers.py  Histogramming_Triggers.py  Histogramming_Triggers_ND.py  Isolating_Glitch_Triggers_ML.py  Isolating_Glitch_Triggers_Stats.py  Training_SVM.py  triggers_to_xml.py
src/.ipynb_checkpoints/: Find_Dirty_Triggers-checkpoint.py  Histogramming_Triggers-checkpoint.py
src/pinch/: __init__.py  find_dirty_triggers.py  overlap_and_svm.py  overlap_engine.py  train_score_svm.py
src/pinch/dag/: fetch_gstlal_triggers.sub  find_dirty_trigs.sub
src/pinch/handlers/: __init__.py  gspy_handler.py  gstlal_handler.py  omicron_handler.py
src/pinch/models/: __init__.py  one_class_svm.py
src/pinch/pipelines/: __init__.py  overlap_engine.py  overlap_pipeline.py  svm_pipeline.py
src/pinch/utils/: __init__.py  chunk_parse.py  trigger_io.py
