[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinch"
version = "0.1.0"
description = "Association of pipeline triggers with the glitches that cause them"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb==1.2.2",
    "gwpy==3.0.11",
    "numpy==1.24.4",
    "pandas==2.2.3",
    "intervaltree==3.1.0",
    "scikit-learn==1.2.1",
]

[project.scripts]
overlap_and_score = "pinch.overlap_and_svm:main"
#find_dirty_triggers = "pinch.find_dirty_triggers:main"
train_and_score = "pinch.train_score_svm:main"
#gspy_query = "pinch.utils.gspy_handler:main"
